--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 </ul>
             </div>
         </div>
+        <footer>
+            <p>Made with ❤️ by <span>ABR</span></p>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
