--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <div class="content">
             <div class="box1">
-                <input id="task" type="text" placeholder="Add new task...">
+                <input id="task" type="text" placeholder="Add new task..." autocomplete="off">
                 <input type="button" value="Add" onclick="AddTask()">
             </div>
             <div class="box2">
